server/compilers/goLiteJS/src/test/ml2/invalid/invreturn4.go
package main
//Error: Missing return statements on while loop with condition

func main() bool{
    var a bool = true;
    for {

    }
    

}
